[package]
name = "rest"
version = "0.1.0"
authors = ["Tiago Castro <tiago.castro@mayadata.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "rest"
path = "./service/src/main.rs"

[lib]
name = "rest_client"
path = "./src/lib.rs"

[dependencies]
rustls = "0.18"
actix-web = { version = "3.2.0", features = ["rustls"] }
actix-service = "1.0.6"
mbus_api = { path = "../mbus-api" }
async-trait = "0.1.41"
serde_json = { version = "1.0", features = ["preserve_order"] }
structopt = "0.3.15"
futures = "0.3.6"
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2.4"
strum = "0.19"
strum_macros = "0.19"
anyhow = "1.0.32"
snafu = "0.6"
url = "2.2.0"
opentelemetry-jaeger = { version = "0.10", features = ["tokio"] }
tracing-opentelemetry = "0.10.0"
opentelemetry = "0.11.2"
actix-web-opentelemetry = "0.9.0"
paperclip = { version = "0.5.0", default-features = false, optional = true }
macros = { path = "../macros" }
http = "0.2.3"
tinytemplate = { version = "1.2" }

[dev-dependencies]
composer = { path = "../../composer" }
rpc = { path = "../../rpc" }
tokio = { version = "0.2", features = ["full"] }
actix-rt = "1.1.1"

[dependencies.serde]
features = ["derive"]
version = "1.0"

[features]
default = ["paperclip", "paperclip/actix3"]
nightly = ["paperclip", "paperclip/actix-nightly"]
