[package]
name = "ctrlp-tests"
version = "0.1.0"
authors = ["Tiago Castro <tiago.castro@mayadata.io>"]
edition = "2018"
description = "Control Plane 'Compose' Tests"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
composer = { path = "../../composer" }
deployer = { path = "../deployer" }
rest = { path = "../rest" }
actix-rt = "1.1.1"
opentelemetry-jaeger = { version = "0.10", features = ["tokio"] }
tracing-opentelemetry = "0.10.0"
tracing = "0.1"
opentelemetry = "0.11.2"
actix-web-opentelemetry = "0.9.0"
anyhow = "1.0.32"