[package]
name = "actix-openapi-macros"
version = "0.1.0"
authors = ["Tiago Castro <tiago.castro@mayadata.io>"]
edition = "2018"
description = "Collection of method/route macros to provide compatibility between actix v3 proc-macros and paperclip."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0.0", features = ["full"] }
proc-macro2 = "1.0.24"
quote = "1.0.8"

[lib]
proc-macro = true
